syntax = "proto3";
/*
This file describes the header you can find near the start of an encrypted msgstore.db.crypt15 file.
 */
message Crypt15Prefix {
    bool key_type = 1; // 1 if HSM_CONTROLLED, 0 if WA_PROVIDED
    message IV = 3{
        bytes IV = 1; // The 16-bytes long IV
    }
    message BackupMetadata = 4 {
        string whatsapp_version = 1; // Whatsapp version, for example "2.22.4.14"
        string substringedUserJid = 3; //The last two characters of the user's Jid (phone number)
        bool feature1 = 4; //Booleans that indicate varios features
        bool feature2 = 5;
        bool feature3 = 6;
        bool feature4 = 7;
        bool feature5 = 8;
        bool feature6 = 9;
        bool feature7 = 10;
        bool feature8 = 11;
        bool feature9 = 12;
        bool feature10 = 13;
        bool feature11 = 14;
        bool feature12 = 15;
        bool feature13 = 16;
        bool feature14 = 17;
        bool feature15 = 18;
        bool feature16 = 19;
        bool feature17 = 20;
        bool feature18 = 21;
        bool feature19 = 22;
        bool feature20 = 23;
        bool feature21 = 24;
        bool feature22 = 25;
        bool feature23 = 26;
        bool feature24 = 27;
        bool feature25 = 28;
        bool feature26 = 29;
        bool feature27 = 30;
        bool feature28 = 31;
        bool feature29 = 32;
        bool feature30 = 33;
        bool feature31 = 34;
        bool feature32 = 35;
        bool feature33 = 36;
        bool feature34 = 37;
        
    }
}